--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,5 @@
-# railway.toml
-
-# Build section
 [build]
-command = "pip install -r requirements.txt"
+command = "pip install -r requirements.txt && python manage.py migrate"
 
-# Start section
 [start]
-command = "python manage.py runserver"
+command = "python manage.py runserver 0.0.0.0:8000"
