--- a/railway.toml
+++ b/railway.toml
@@ -3,3 +3,6 @@ command = "pip install -r requirements.txt && python manage.py migrate"
 
 [start]
 command = "python manage.py runserver 0.0.0.0:8000"
+
+gunicorn your_project_name.wsgi --bind 0.0.0.0:$PORT
+
