--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,5 @@
 command = "pip install -r requirements.txt && python manage.py migrate"
 
 [start]
-command = "python manage.py runserver 0.0.0.0:8000"
-
-gunicorn t1.wsgi --bind 0.0.0.0:$PORT
+command = "python manage.py runserver"
 
